# crystalMancer

./: .gitignore  AGENTS.md  README.md  architecture_guide.md  pyproject.toml  requirements.txt
autoresearch/: program.md  run_autoresearch.sh
crystalmancer/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
crystalmancer/cif/: __init__.py  downloader.py  filter.py
crystalmancer/data/: dataset_builder.py  gnome_client.py  mp_client.py
crystalmancer/extraction/: application.py  extractor.py  llm_client.py  llm_extractor.py  performance.py  synthesis.py
crystalmancer/graph/: __init__.py  dataset.py  featurizer.py  graph_builder.py
crystalmancer/knowledge_graph/: __init__.py  embeddings.py  graph_db.py  graph_queries.py  local_graph.py
crystalmancer/literature/: __init__.py  crossref.py  doi_matcher.py  open_access.py  retriever.py  scihub.py  semantic_scholar.py
crystalmancer/model/: model.py  model_v2.py  physics_loss.py  train.py
crystalmancer/rag/: __init__.py  query_engine.py  rag_planner.py
crystalmancer/reporting/: summary.py
crystalmancer/storage/: json_store.py
crystalmancer/validation/: __init__.py  dft_runner.py  screening.py
notebooks/: Data_Collection_Colab.ipynb
scripts/: download_all.py  mine_literature.py  run_data_mining.py
tests/: test_data_mining.py  test_extraction.py  test_filter.py  test_literature.py  test_pipeline.py
viewer/: index.html
